# home-device-bridge

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: devices.example.json
scripts/: deploy.sh
src/: __init__.py
src/integrations/: __init__.py  home_assistant.py
src/notifications/: __init__.py  manager.py
src/server/: __init__.py  app.py  config.py  http_server.py  main.py  mcp_server.py
src/server/prompts/: notifications.py
src/server/resources/: notifications.py
src/server/routes/: devices.py  health.py  notifications.py
src/server/tools/: general.py  notifications.py
src/tools/: notifications.py
src/utils/: logger.py
tests/: __init__.py  test_health.py
