[project]
name = "home-device-bridge"
version = "0.1.0"
description = "Minimal FastMCP server for Docker deployment"
authors = [
    {name = "Vitya", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "httpx>=0.28.0",
    "starlette>=0.36.0",
    "uvicorn>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
